[package]
name          = "show-image"
version       = "0.12.1"
license       = "BSD-2-Clause"
description   = "quickly show images in a window for debugging"

edition       = "2021"

repository    = "https://github.com/robohouse-delft/show-image-rs"
documentation = "https://docs.rs/show-image"
readme        = "README.md"

authors = [
	"Maarten de Vries <maarten@de-vri.es>",
	"Hans Gaiser <hans.gaiser@robovalley.com>",
	"RoboHouse <robohouse@robovalley.com>",
]

keywords = ["image", "visualize", "show", "debug"]
categories = [
	"development-tools::debugging",
	"multimedia::images",
	"visualization",
	"gui",
]

[features]
default  = ["macros"]
doc-only = ["tch/doc-only"]
full     = ["save", "image", "tch", "raqote", "macros"]
macros   = ["show-image-macros"]
nightly  = []
save     = ["tinyfiledialogs", "png", "log"]

[dependencies]
futures           = { version = "0.3.5", default-features = false, features = ["executor"] }
glam              = "0.20.0"
image             = { version = "0.24.1", optional = true, default-features = false }
log               = { version = "0.4.11", optional = true }
png               = { version = "0.17.0", optional = true }
raqote            = { version = "0.8.0", optional = true, default-features = false }
show-image-macros = { version = "=0.12.1", optional = true, path = "show-image-macros" }
tch               = { version = ">=0.1.6, <0.8.0",  optional = true }
tinyfiledialogs   = { version = "3.3.9", optional = true }
wgpu              = { version = "0.12.0", features = ["spirv"] }
winit             = "0.26.1"

[dev-dependencies]
show-image = { path = ".", features = ["full"] }
assert2    = "0.3.5"
image      = { version = "0.24.1", default-features = false, features = ["png"] }
env_logger = "0.9.0"

[build-dependencies]
rustc_version = "0.4.0"

[package.metadata.docs.rs]
features = ["doc-only", "full", "nightly"]

[workspace]
members = ["show-image-macros"]
