[package]
name          = "show-image"
version       = "0.14.0"
license       = "BSD-2-Clause"
description   = "quickly show images in a window for debugging"

edition       = "2021"

repository    = "https://github.com/robohouse-delft/show-image-rs"
documentation = "https://docs.rs/show-image"
readme        = "README.md"

authors = [
	"Maarten de Vries <maarten@de-vri.es>",
	"Hans Gaiser <hans.gaiser@robovalley.com>",
	"RoboHouse <robohouse@robovalley.com>",
]

keywords = ["image", "visualize", "show", "debug"]
categories = [
	"development-tools::debugging",
	"multimedia::images",
	"visualization",
	"gui",
]

[[example]]
name = "show-raqote"
required-features = ["raqote"]

[[example]]
name = "show-image-tch"
required-features = ["tch"]

[features]
default  = ["macros"]
doc-only = ["tch/doc-only"]
full     = ["save", "image", "tch", "raqote", "macros"]
macros   = ["show-image-macros"]
nightly  = []
save     = ["tinyfiledialogs", "png", "log"]

[dependencies]
futures           = { version = "0.3.28", default-features = false, features = ["executor"] }
glam              = ">=0.20.0, <0.25.0"
image             = { version = "0.25.0", optional = true, default-features = false }
indexmap          = "2.0.0"
log               = { version = "0.4.19", optional = true }
png               = { version = "0.17.9", optional = true }
raqote            = { version = "0.8.2", optional = true, default-features = false }
show-image-macros = { version = "=0.12.3", optional = true, path = "show-image-macros" }
tch               = { version = ">=0.13.0, <0.19.0",  optional = true }
tinyfiledialogs   = { version = "3.9.1", optional = true }
wgpu              = { version = "0.17.0", features = ["spirv"] }
winit             = "0.28.6"

[dev-dependencies]
show-image = { path = ".", features = ["image"] }
assert2    = "0.3.11"
image      = { version = "0.25.0", default-features = true }
env_logger = "0.10.0"

[build-dependencies]
rustc_version = "0.4.0"

[package.metadata.docs.rs]
features = ["doc-only", "full", "nightly"]

[workspace]
members = ["show-image-macros"]
