[package]

name = "show-image-macros"
version = "0.12.3"
license = "BSD-2-Clause"
description  = "macros for the show-image crate"
edition = "2018"

repository = "https://github.com/robohouse-delft/show-image-rs"

authors = ["Maarten de Vries <maarten@de-vri.es>"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.32"
proc-macro2 = "1.0.66"
syn = { version = "1.0.109", features = ["full"] }

[dev-dependencies]
show-image = { path = ".." }
